--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -34,3 +34,28 @@ jobs:
           tags: |
             "${{ vars.REGISTRY }}/${{ vars.IMAGE }}:${{ github.sha}}"
             "${{ vars.REGISTRY }}/${{ vars.IMAGE }}:latest"
+            
+  scan-vuln-with-trivy:
+    runs-on: ubuntu-latest
+    needs: ["build-and-push"]
+    steps:
+      - name: Scan vulnerabilities with Trivy
+        uses: aquasecurity/trivy-action@master
+        with:
+          image-ref: '${{ vars.REGISTRY }}/${{ vars.IMAGE }}:${{ github.sha }}'
+          vuln-type: 'os,library'
+          severity: 'CRITICAL,HIGH'
+          ignore-unfixed: true
+          template: '@/contrib/html.tpl'
+          exit-code: '1'
+          format: 'template'
+          output: report.html
+        env:
+          TRIVY_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
+          TRIVY_PASSWORD: ${{ secrets.DOCKERHUB_PASSWORD }}
+      
+      - name: Upload Trivy Report
+        uses: actions/upload-artifact@v2
+        with:
+          name: trivy-report
+          path: report.html
