--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -37,7 +37,7 @@ jobs:
             
   scan-vuln-with-trivy:
     runs-on: ubuntu-latest
-    needs: ["build-and-push"]
+    needs: [build-and-push]
     steps:
       - name: Scan vulnerabilities with Trivy
         uses: aquasecurity/trivy-action@master
@@ -59,3 +59,39 @@ jobs:
         with:
           name: trivy-report
           path: report.html
+  
+  deploy-on-k8s:
+    runs-on: 'ubuntu-latest'
+    needs: [build-and-push, scan-vuln-with-trivy]
+    steps:
+      - name: Checkout this repo
+        uses: actions/checkout@v4
+        with:
+          path: main
+
+      - name: Checkout repo helm
+        uses: actions/checkout@v4
+        with:
+          repository: 'gutobrutus/helm-adventures'
+          sparse-checkout: charts/hello-django
+          path: helm
+      
+      # Sobe um cluster com kind apenas para teste de pipeline
+      # Comentar se não for para teste
+      - name: Create k8s Kind Cluster
+        uses: helm/kind-action@v1.5.0
+
+      - name: Deploy com helm
+        run: |
+          # echo -n "${{ secrets.KUBECONFIG }}" > kubeconfig.yaml
+          helm upgrade --install --atomic --timeout 1m hello-django \
+          helm/charts/hello-django \
+          --namespace pipeline --create-namespace \
+          #--kubeconfig ./kubeconfig.yaml \
+          --set settingsPy.secretKey=${{ secrets.SECRET_KEY_DJANGO }} \
+          --set settingsPy.debug=False \
+          --set settingsPy.databaseUser=${{ secrets.DB_USER }} \
+          --set settingsPy.databasePassword=${{ secrets.DB_PASS }} \
+          --set settingsPy.databaseHost=${{ vars.DB_HOST }} \
+          --set settingsPy.databasePort=${{ vars.DB_PORT }} \
+          --set image.tag=${{ github.sha }} --dry-run
