--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -83,11 +83,10 @@ jobs:
 
       - name: Deploy com helm
         run: |
-          # echo -n "${{ secrets.KUBECONFIG }}" > kubeconfig.yaml
+          kubectl get nodes
           helm upgrade --install --atomic --timeout 1m hello-django \
           helm/charts/hello-django \
           --namespace pipeline --create-namespace \
-          #--kubeconfig ./kubeconfig.yaml \
           --set settingsPy.secretKey=${{ secrets.SECRET_KEY_DJANGO }} \
           --set settingsPy.debug=False \
           --set settingsPy.databaseUser=${{ secrets.DB_USER }} \
