chore: step comentada de deploy

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -94,3 +94,18 @@ jobs:
           --set settingsPy.databaseHost='${{ vars.DB_HOST }}' \
           --set settingsPy.databasePort='${{ vars.DB_PORT }}' \
           --set image.tag=${{ github.sha }} --dry-run
+
+      #- name: Deploy com helm
+        #run: |
+          #echo -n "${{ secrets.KUBECONFIG }}" > kubeconfig.yaml
+          #helm upgrade --install --atomic --timeout 1m hello-django \
+          #helm/charts/hello-django \
+          #--namespace pipeline --create-namespace \
+          #--kubeconfig ./kubeconfig.yaml \
+          #--set settingsPy.secretKey='${{ secrets.SECRET_KEY_DJANGO }}' \
+          #--set settingsPy.debug=False \
+          #--set settingsPy.databaseUser='${{ secrets.DB_USER }}' \
+          #--set settingsPy.databasePassword='${{ secrets.DB_PASS }}' \
+          #--set settingsPy.databaseHost='${{ vars.DB_HOST }}' \
+          #--set settingsPy.databasePort='${{ vars.DB_PORT }}' \
+          #--set image.tag=${{ github.sha }}
